--- a/src/main/resources/views/Scene.fxml
+++ b/src/main/resources/views/Scene.fxml
@@ -26,7 +26,7 @@
           <Menu mnemonicParsing="false" text="Arquivo">
             <items>
               <MenuItem mnemonicParsing="false" onAction="#abrirArquivos" text="Abrir" />
-                  <MenuItem mnemonicParsing="false" onAction="#fecharPrograma" text="Sair" />
+                  <MenuItem mnemonicParsing="false" onAction="#fecharPrograma" text="Fechar" />
             </items>
           </Menu>
           <Menu mnemonicParsing="false" text="Sobre">
