--- a/src/main/resources/views/Scene.fxml
+++ b/src/main/resources/views/Scene.fxml
@@ -18,8 +18,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.com.rodolfo.decisao.controllers.TelaController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.com.rodolfo.decisao.controllers.TelaController">
    <top>
       <MenuBar BorderPane.alignment="CENTER">
         <menus>
@@ -52,6 +51,9 @@
                <font>
                   <Font name="Times New Roman" size="14.0" />
                </font>
+               <GridPane.margin>
+                  <Insets />
+               </GridPane.margin>
             </TextArea>
             <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0" spacing="40.0" GridPane.columnIndex="1">
                <children>
@@ -103,20 +105,33 @@
                         <Separator prefWidth="200.0" />
                      </children>
                   </VBox>
-                  <Button fx:id="btnAnalisar" defaultButton="true" mnemonicParsing="false" onAction="#btnAnalisarAction" text="Analisar" textAlignment="CENTER">
-                     <padding>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                     </padding>
-                     <cursor>
-                        <Cursor fx:constant="HAND" />
-                     </cursor>
-                  </Button>
+                  <VBox alignment="BOTTOM_CENTER" prefHeight="200.0" prefWidth="100.0">
+                     <children>
+                        <Button fx:id="btnAnalisar" defaultButton="true" mnemonicParsing="false" onAction="#btnAnalisarAction" text="Analisar" textAlignment="CENTER">
+                           <padding>
+                              <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+                           </padding>
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
+                           <font>
+                              <Font name="Times New Roman" size="18.0" />
+                           </font>
+                        </Button>
+                     </children>
+                     <VBox.margin>
+                        <Insets top="20.0" />
+                     </VBox.margin>
+                  </VBox>
                </children>
                <GridPane.margin>
                   <Insets left="10.0" />
                </GridPane.margin>
             </VBox>
          </children>
+         <BorderPane.margin>
+            <Insets bottom="15.0" />
+         </BorderPane.margin>
       </GridPane>
    </center>
 </BorderPane>
